<resources>
    <string name="app_name">玩Android</string>
    <string name="welcome_count_down">跳过(%s)</string>

    <string name="nav_item_favorite">收藏</string>
    <string name="nav_item_night_mode">夜间模式</string>
    <string name="nav_item_setting">设置</string>
    <string name="nav_item_about_me">关于我们</string>
    <string name="nav_item_log_out">退出</string>
    <string name="nav_header_nick">个人昵称</string>
    <string name="nav_header_portrait">头像</string>
    <string name="bottom_home_page">首页</string>
    <string name="bottom_knowledge_hierarchy">知识体系</string>
    <string name="bottom_navigation">导航</string>
    <string name="bottom_project">项目</string>
    <string name="nav_open">打开</string>
    <string name="nav_close">关闭</string>
    <string name="toolbar_search_hint">搜索</string>
    <string name="main_toolbar_search">搜索更多内容</string>
    <string name="loading_desc">加载中…</string>
    <string name="loading_end_desc">我是有底线的</string>
    <string name="loading_fail_desc">数据加载失败</string>
    <string name="recycle_item_source_desc">文章来源</string>
    <string name="unknown_error">未知错误</string>
    <string name="home_page_get_article_fail">获取文章列表数据失败</string>
    <string name="tv_net_error">网络正在开小差！</string>
    <string name="btn_net_error_retry">请点击重试</string>
    <string name="tv_no_data_error">没有数据，不晓得数据去哪儿了！</string>
    <string name="permission_rationale_message">请放心，应用拿到权限不会做坏事，我们是一款良心App</string>
    <string name="permission_denied_forever_message">为了保证您正常、安全的使用玩Android客户端，需要获取相关权限，请允许</string>
</resources>
