<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/tab_home_page"
        android:title="@string/bottom_home_page"
        android:icon="@drawable/ic_home_page"
        android:enabled="true"/>

    <item android:id="@+id/tab_knowledge_hierarchy"
        android:title="@string/bottom_knowledge_hierarchy"
        android:icon="@drawable/ic_knowledge_hierarchy"
        android:enabled="true"/>

    <item android:id="@+id/tab_navigation"
        android:title="@string/bottom_navigation"
        android:icon="@drawable/ic_navigation"
        android:enabled="true"/>

    <item android:id="@+id/tab_project"
        android:title="@string/bottom_project"
        android:icon="@drawable/ic_project"
        android:enabled="true"/>

</menu>