<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp50"
    android:padding="@dimen/dp10">

    <LinearLayout
        android:id="@+id/ll_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp10"
            android:indeterminateTint="?attr/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/loading_desc"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="@dimen/font_small_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_loading_end"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="gone">

        <View
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp16"
            android:layout_weight="1"
            android:background="@drawable/line_shape" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/loading_end_desc"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="@dimen/font_medium_size" />

        <View
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp16"
            android:layout_weight="1"
            android:background="@drawable/line_shape" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_loading_fail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="gone">

        <View
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp16"
            android:layout_weight="1"
            android:background="@drawable/line_shape" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/loading_fail_desc"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="@dimen/font_medium_size" />

        <View
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp16"
            android:layout_weight="1"
            android:background="@drawable/line_shape" />
    </LinearLayout>


</FrameLayout>